Completed report and powerpoint.

--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -2,8 +2,10 @@
 
 \usepackage{import}
 
-\usepackage[utf8]{inputenc}
+% latin modern
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 
 % Avoid indentation at begin of each section 
 \usepackage{parskip}
@@ -13,7 +15,6 @@
 
 \usepackage{amsmath}
 \usepackage{hyperref, cleveref}
-
 
 % For importing \maketitle with university parameters
 \usepackage{preamble/universitytitlepage}
