--- a/report/report/subsections/background/metasr.tex
+++ b/report/report/subsections/background/metasr.tex
@@ -9,7 +9,7 @@ In order to overcame fixed integer problems \cite{MetaSR} exploit \textbf{meta-l
 
 \subsubsection{Background}
 
-The idea is used in \cite{ParametrizedImageOperator} where research trained different parametrized operator ( a generic function that transforms an image based on parameters ) using a neural network exploiting meta-learning.
+The idea is used in \cite{ParametrizedImageOperator} where research trained different parametrized operators ( a generic function that transforms an image based on parameters ) using a neural network exploiting meta-learning.
 
 There are two networks \Cref{PIO:model}:
 \begin{itemize}
