--- a/report/powerpoint/powerpoint.tex
+++ b/report/powerpoint/powerpoint.tex
@@ -19,6 +19,33 @@
 
 \newcommand{\linksection}[1]{\hyperlink{section:#1}{\nameref{section:#1}}}
 
+\newcommand{\drawtestimages}[3]{%
+% 1: true label: e.g. Urban100
+% 2: root image : project-urban-100
+% 3: scale
+\begin{columns}
+    
+    \begin{column}{0.5\paperwidth}
+        \begin{figure}
+            \centering
+            \includegraphics[scale=#3]{#2-input}
+            \caption{Input}
+            \includegraphics[scale=#3]{#2-bicubic}
+            \caption{Bicubic.}
+        \end{figure}
+    \end{column}
+    \begin{column}{0.5\paperwidth}
+        \begin{figure}
+                \centering
+                \includegraphics[scale=#3]{#2-gt}
+                \caption{Ground truth.}
+                \includegraphics[scale=#3]{#2-output}
+                \caption{Output.}
+        \end{figure}
+    \end{column}    
+\end{columns}
+}
+
 \defbeamertemplate*{title page}{customized}[1][]
 {
   \begin{center}
@@ -35,7 +62,7 @@
 
 \institute{Alma Mater Studiorum \\ University of Bologna}
 \title{Artificial Intelligence \\ Machine Learning for Computer Vision}
-\subtitle{Project work}
+\subtitle{}
 \author{Alessandro Dicosola [Matr. 935563]}
 \date{}
 
@@ -333,7 +360,111 @@
     \end{figure}
 \end{frame}
 
+% PROJECT
+\begin{frame}{Project}
+    \only<1-3>{
+        \framesubtitle{Architecture}
+    }
+    \only<4-5>{
+        \framesubtitle{Training}
+    }
+    \only<6-8>{
+        \framesubtitle{Testing}
+    }
 
+    % Architecture
+    \only<1>{
+        \begin{figure}
+            \begin{subfigure}{\textwidth}
+                \centering
+                \includegraphics[width=0.7\textwidth, keepaspectratio]{project-tuning-random-configs.png}
+                \caption{Training time of different random configurations. There are many other configurations missing due to \textit{out of memory} error.}\label{project:random-configurations}
+            \end{subfigure}
+            \begin{subfigure}{\textwidth}
+                \centering
+                \includegraphics[width=\textwidth, keepaspectratio]{project-tuning-batch-time.png}        
+                \caption{Comparison between the training time of 1 epoch of the default configuration, using the trick and not using the trick.}\label{project:batch-time}
+            \end{subfigure}
+        
+            \caption{Trining time of 1 epoch. The name contains: E is \textit{epoch}, B is \textit{batch size}, S is \textit{save checkpoint} and the network parameters.}    
+        \end{figure}
+    }
+    \only<2>{
+        \begin{tabular}{lcc}
+            & Project architecture & Paper architecture \\
+            DABs & 8 & 16 \\
+            IDBs & 4 & 8 \\
+            Features DAB & 32 & 64 \\
+            Features IDB & 32 & 64 
+        \end{tabular}
+    }
+    \only<3>{
+        \resizebox{\textwidth}{!}{
+        \begin{tabular}{l|ccc}
+            & Paper model & Base model(dark blue) & Complex model (light blue) \\
+            Total params & 22,405,168 & 828,928 & 1,111,270 \\
+            Trainable params & 22,405,168 & 828,928 & 1,111,270 \\
+            Non trainable params  & 0 & 0 & 0 \\
+            \hline 
+            Input size (MB) & 0.84 & 0.84 & 0.84 \\
+            Forward/Backward pass size (MB) & 10231.38 & 4911.24 & 5281.37 \\
+            Params size (MB) & 85.47 & 3.16 & 4.24 \\
+            Estimated total size & 10317.70 & 4915.24 & 5286.45                    
+        \end{tabular}
+    }
+    }
+
+    % Training
+    \only<4>{
+        \begin{figure}
+            \begin{subfigure}{0.2\textwidth}
+                \centering
+                \includegraphics[width=\textwidth, keepaspectratio]{project-training-only-time.png}
+                \caption{Training time.}
+            \end{subfigure}
+            \begin{subfigure}{0.5\textwidth}
+                \centering
+                \includegraphics[width=\textwidth, keepaspectratio]{project-training-lr.png}
+                \caption{Learning rate over time.}
+            \end{subfigure}
+            \begin{subfigure}{\textwidth}
+                \centering
+                \includegraphics[width=0.5\textwidth, keepaspectratio]{project-training-val-loss.png}
+                \caption{Train-Val loss.}
+            \end{subfigure}
+            \caption{Training with 500 epochs.}
+        \end{figure}
+    }
+
+    % Training
+    \only<5>{
+        \begin{figure}
+            \begin{subfigure}{\textwidth}
+                \centering
+                \includegraphics[width=0.5\textwidth, keepaspectratio]{project-input-e500.png}
+                \caption{Input.}
+            \end{subfigure}
+            \begin{subfigure}{\textwidth}
+                \centering
+                \includegraphics[width=0.5\textwidth, keepaspectratio]{project-output-e500.png}
+                \caption{Output.}
+            \end{subfigure}
+            \caption{Validation images at 500 epoch.}\label{project:training}
+        \end{figure}
+    }
+    
+    \only<6>{
+        \drawtestimages{Set5}{project-set-5}{0.4} %OK
+    }
+    \only<7>{
+        \drawtestimages{Urban100}{project-urban-100}{0.09} %OK
+    }
+    \only<8>{
+        \drawtestimages{Manga109}{project-manga-109}{0.1} %OK
+    }
+    
+
+\end{frame}
 
 % EXTRA 
 \begin{frame}{Extra}
