--- a/report/report/subsections/project.tex
+++ b/report/report/subsections/project.tex
@@ -25,7 +25,7 @@
             \includegraphics[scale=#3]{#2-output}
             \caption{Output.}
         \end{subfigure}
-        \caption{Base model applied to #1.}
+        \caption{Base model applied to #1.}\label{project:test-#1}
     \end{figure}
 }
 
@@ -189,16 +189,16 @@ The following are the results of the base model during testing with:
 \begin{tabular}{l|cc}
     Dataset & PSNR & SSIM \\
     \hline
-    BSDS100 & 13.489 & 0.900 \\
-    Manga109 & 11.834 & 0.890 \\
-    Set14 & 13.220 & 0.905 \\
-    Set5 & 11.893 & 0.875 \\
-    Urban100 & 12.665 & 0.985 \\
-    historical\footnotemark & 13.821 & 0.922
+    BSDS100 & 24.923 & 0.73424 \\
+    Manga109 & 23.252 & 0.81887 \\
+    Set14 & 24.033 & 0.73389 \\
+    Set5 & 26.613 & 0.81929\\
+    Urban100 & 21.734 & 0.71546 \\
+    historical\footnotemark & 20.717 & 0.66789
 \end{tabular}
 
 The only comparison is done with bicubic interpolation. 
-The network is able to reconstruct sharp edges but unable to restore all the details from the original image. 
+The network is able to reconstruct sharp edges but unable to restore all the details from the original image [\Cref{project:test-Urban100},\Cref{project:test-Manga109},\Cref{project:test-Set5},\Cref{project:test-Set14},\Cref{project:test-BSDS100},\Cref{project:test-historical}]
 
 \drawtestimages{Urban100}{project-urban-100}{0.168} %OK
 \drawtestimages{Manga109}{project-manga-109}{0.20} %OK
