Implemented ensemble (close #5)

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -354,3 +354,22 @@
   biburl    = {https://dblp.org/rec/journals/corr/ShiCTHALW16.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{snapshotesembling,
+  author    = {Gao Huang and
+               Yixuan Li and
+               Geoff Pleiss and
+               Zhuang Liu and
+               John E. Hopcroft and
+               Kilian Q. Weinberger},
+  title     = {Snapshot Ensembles: Train 1, get {M} for free},
+  journal   = {CoRR},
+  volume    = {abs/1704.00109},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1704.00109},
+  archivePrefix = {arXiv},
+  eprint    = {1704.00109},
+  timestamp = {Mon, 10 Sep 2018 15:49:32 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/HuangLPLHW17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
