--- a/report/report/subsections/background/extra.tex
+++ b/report/report/subsections/background/extra.tex
@@ -114,6 +114,6 @@ The researchers experimentally prove the correctness of the pre-activation resid
 
 \subsubsection{Pixel Shuffle: sub-pixel convolution \cite{subpixelconvolution}}
 
-The \textbf{Pixel Shuffle} rearrange the features $C \cdot r^2 \times H \times W$ learned into the LR space into $C \times 2 \cdot H \times 2 \cdot W$ activations learned into the HR space.
+The \textbf{Pixel Shuffle} rearrange the features $C \cdot r^2 \times H \times W$ learned into the LR space into $C \times r \cdot H \times r \cdot W$ activations learned into the HR space.
 
 In \cite{eli5subpixelconvolution}, the authors proved that transposed convolution and subpixel convolution return the same result and convolving the features map with a convolution ($r^2 \cdot C_{out}$, $C_{in}$, $k_H$, $k_W$) where r is the upscale factor and then rearrange the activations in order to have an activation whose size is $(r \cdot H, r \cdot W)$ is the same as apply a transposed convolution ($C_{out}$, $C_{in}$, $r \cdot k_H$, $r \cdot k_W$)  ( fractional strided convolution where the input is modified inserting zeros in between and padded in order to have an output upscaled with respect the input) 
