--- a/report/powerpoint/powerpoint.tex
+++ b/report/powerpoint/powerpoint.tex
@@ -401,7 +401,7 @@
         \begin{tabular}{lcc}
             & Project architecture & Paper architecture \\
             DABs & 8 & 16 \\
-            IDBs & 4 & 8 \\
+            Convolutions in IDB & 4 & 8 \\
             Features DAB & 32 & 64 \\
             Features IDB & 32 & 64 
         \end{tabular}
