--- a/report/report/subsections/project.tex
+++ b/report/report/subsections/project.tex
@@ -58,7 +58,7 @@ The following hardware was used:
     \caption{Trining time of 1 epoch. The name contains: E is \textit{epoch}, B is \textit{batch size}, S is \textit{save checkpoint} and the network parameters.}    
 \end{figure}
 
-\textbf{ASDN} is using a bi-dense connection this means a lot of memory is used for storing intermediate activations as well as gradients: the default configuration, number of dense attention block 16 and number of intra connected layers 8, is not suitable for my computer.
+\textbf{ASDN} is using a bi-dense connection this means a lot of memory is used for storing intermediate activations as well as gradients: the default configuration, number of dense attention block 16 and number of convolutions in the IDB 8, is not suitable for my computer.
 
 In order to train the default configuration an implementation trick can be used (\textbf{save checkpoint}\footnote{\href{https://pytorch.org/docs/stable/checkpoint.html}{PyTorch checkpoint}}): avoid to store gradient and activations during the forward pass and recompute them during the backward pass; but this increase the training time of a \textbf{single batch} as we can see from \Cref{project:batch-time}
 
@@ -67,7 +67,7 @@ Among many configurations tried [\Cref{project:random-configurations}] the final
 \begin{tabular}{lcc}
     & Project architecture & Paper architecture \\
     DABs & 8 & 16 \\
-    IDBs & 4 & 8 \\
+    Convolutions in IDB & 4 & 8 \\
     Features DAB & 32 & 64 \\
     Features IDB & 32 & 64 
 \end{tabular}
